
syntax = "proto3";

import "google/protobuf/timestamp.proto";

package Ipc.Grpc.NamedPipes.Internal.Transport;

//TODO: move this to FrameHeader
message Message {
    oneof data {
        Request request = 1;
        Reply response = 2;
        Cancel cancel = 3;
        Streaming streaming = 4;
        StreamingEnd streamingEnd = 5;
        Headers responseHeaders = 6;
    }
}

message Request {
	string methodFullName = 1;
	MethodType methodType = 2;
	google.protobuf.Timestamp deadline = 3;
	Headers headers = 4;
    
	enum MethodType
	{
		unary = 0;
		clientStreaming = 1;
		serverStreaming = 2;
		duplexStreaming = 3;
	}
}

message Headers {
    repeated MetadataEntry metadata = 1;
}

message Reply {
	repeated MetadataEntry trailers = 1;
	int32 status_code = 2;
	string status_detail = 3;
}

message MetadataEntry {
    string name = 1;
    oneof value {
        string valueString = 2;
        bytes valueBytes = 3;
    }
}

message Cancel{}
message Streaming{}
message StreamingEnd{}
